--- a/pueba.html
+++ b/pueba.html
@@ -44,15 +44,15 @@
                         <div class="card-body">
 
                             <label class="labelinputcolor" for="nombreEmpresa"> Nombre de la Empresa:</label>
-                            <input type="text" class="form-control" required>
+                            <input type="text" id="txtNombre" class="form-control" required>
 
 
                             <label class="labelinputcolor" for="direccion">Direccion:</label>
-                            <input type="text" class="form-control" required />
+                            <input type="text" id="txtDireccion" name="txtDireccion" class="form-control" required />
 
 
                             <label class="labelinputcolor" for="phone">Telefono:</label>
-                            <input type="telefono" class="form-control" required />
+                            <input type="number" id="txtTelefono" class="form-control" required />
 
 
                             <label class="labelinputcolor" for="mail">Correo electrónico:</label>
@@ -86,7 +86,7 @@
 
 
                             <br>
-                            <button class="btn btn-success" onclick="saludar()">Enviar</button>
+                            <button class="btn btn-success" onclick="saludar()" >Enviar</button>
                             <script src="code.js"></script>
 
                         </div>
@@ -97,6 +97,28 @@
 
         </div>
     </div>
+
+
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
